hphp/hack/test/typecheck/foreach_ref3.php.exp
File "foreach_ref3.php", line 5, characters 26-28:
Undefined variable: $v1 (Naming[2050])
